--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "sass-loader": "^4.1.0"
+    "sass-loader": "^4.1.0",
+    "styled-components": "^1.2.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
