--- a/package.json
+++ b/package.json
@@ -52,8 +52,11 @@
     "node-sass": "^4.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "rxjs": "^5.1.0",
     "sass-loader": "^4.1.0",
     "styled-components": "^1.2.1"
   },
